# ChicagoEDA

./: .env.default  .gitignore  Census_and_BlockParty_Analysis.ipynb  Connect to Census Data.ipynb  README.md  app.py  census.py  census_column_codes.py  census_dwnld.csv  directories.py  pyproject.toml
app/: logic.py
