[tool.poetry]
name = "chicagoeda"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
tqdm = "^4.66.5"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.2.5"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
